# gtest_sample

./: CMakeLists.txt  README.md
include/: potegowanie.h
src/: main.cc  potegowanie.cc
tests/: potegowanie_unittest.cc
